# sensor

./: 00_START_HERE.md  CHECKLIST.md  FINAL_REPORT.md  INTEGRATION.md  INTEGRATION_REPORT.md  QUICKSTART.md  README.md  SUMMARY.txt  example_robot_controller.py  setup.sh
install/: local_setup.sh  setup.sh
install/cobot_bringup/share/cobot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cobot_description/share/cobot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/cobot_bringup/: setup.cfg  setup.py
src/cobot_bringup/config/: controllers.yaml
src/cobot_bringup/launch/: bringup.launch.py  robot.launch.py
src/cobot_camera/: package.xml  setup.cfg  setup.py
src/cobot_camera/cobot_camera/: camera_driver.py
src/cobot_camera/config/: camera_config.yaml
src/cobot_camera/launch/: camera.launch.py
src/cobot_description/: setup.cfg  setup.py
src/cobot_driver/: package.xml  setup.cfg  setup.py  test_components.py
src/cobot_driver/cobot_driver/: servo_bridge_node.py  wheel_driver_node.py
src/cobot_hardware/: .yaml  setup.cfg  setup.py
src/cobot_moveit_config/: CMakeLists.txt  package.xml
src/cobot_moveit_config/config/: cobot.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/cobot_moveit_config/launch/: .demo.launch.py.swp  demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/motors/: motors_teleop.py
(+32 files in other folders)
